--- a/css/style.sass
+++ b/css/style.sass
@@ -111,6 +111,7 @@ p.notice
       width: 110px
     &.share_facebook
       width: 160px
+      margin-bottom: 15px
     &.share_twitter
       width: 120px
     &.share_twitter
