--- a/css/style.sass
+++ b/css/style.sass
@@ -117,6 +117,15 @@ p.notice
     &.share_twitter
       width: 100px
 
+#samples
+  margin: 15px 0
+  #sample1
+    width: 90%
+    margin: 0 5% 15px
+  #sample2, #sample3
+    width: 40%
+    margin: 0 5%
+
 /////////////////////////////////////////////
 // PC
 /////////////////////////////////////////////
