--- a/css/style.sass
+++ b/css/style.sass
@@ -146,6 +146,9 @@ p.notice
   .minimize
     transform: scale(0.3)
 
+  .share_buttons .fb-like span
+    vertical-align: baseline !important
+
 /////////////////////////////////////////////
 // スマホ
 /////////////////////////////////////////////
