--- a/css/style.sass
+++ b/css/style.sass
@@ -24,6 +24,7 @@
 /////////////////////////////////////////////
 body
   -webkit-text-size-adjust: 100%
+  font-family: "Lato", Helvetica, 'Hiragino Kaku Gothic ProN', 'ヒラギノ角ゴ ProN W3', Meiryo, メイリオ, Arial, sans-serif
 
 
 p.small
