--- a/index.slim
+++ b/index.slim
@@ -35,6 +35,7 @@ html lang="ja"
 
     .text-center
       button.btn.btn-info data-toggle="modal" data-target="#aboutModal" つかいかた
+    p.small （主要対応ブラウザ：Chrome, Safari）
 
     .container
       .col-md-6#preview_wrap_wrap
