--- a/index.slim
+++ b/index.slim
@@ -183,6 +183,10 @@ html lang="ja"
               ul
                 li
                   label.checkbox
+                    input type="checkbox" value="ActionScript" data-toggle="checkbox"
+                    | ActionScript
+                li
+                  label.checkbox
                     input type="checkbox" value="Assembly" data-toggle="checkbox"
                     | Assembly
                 li
