--- a/index.slim
+++ b/index.slim
@@ -167,8 +167,8 @@ html lang="ja"
                     | LISP
                 li
                   label.checkbox
-                    input type="checkbox" value="Ocaml" data-toggle="checkbox"
-                    | Ocaml
+                    input type="checkbox" value="OCaml" data-toggle="checkbox"
+                    | OCaml
                 li
                   label.checkbox
                     input type="checkbox" value="Scala" data-toggle="checkbox"
