--- a/css/style.sass
+++ b/css/style.sass
@@ -129,13 +129,13 @@ p.notice
 /////////////////////////////////////////////
 // PC
 /////////////////////////////////////////////
-@media (min-width: 993px)
+@media (min-width: 992px)
   header
     display: none
   .fixed
     position: fixed
     top: 0px
-    width: 30%
+    width: 440px
   h1
     text-align: center
     font-size: 54px
@@ -148,6 +148,10 @@ p.notice
 
   .share_buttons .fb-like span
     vertical-align: baseline !important
+
+@media (min-width: 1200px)
+  .fixed
+    width: 540px
 
 /////////////////////////////////////////////
 // スマホ
