--- a/index.slim
+++ b/index.slim
@@ -121,7 +121,7 @@ html lang="ja"
                 li
                   label.checkbox
                     input type="checkbox" value="CoffeeScript" data-toggle="checkbox"
-                    | CoffeeScrippt
+                    | CoffeeScript
                 li
                   label.checkbox
                     input type="checkbox" value="CSS" data-toggle="checkbox"
