--- a/index.slim
+++ b/index.slim
@@ -199,8 +199,8 @@ html lang="ja"
                     | D
                 li
                   label.checkbox
-                    input type="checkbox" value="Fortran" data-toggle="checkbox"
-                    | Fortran
+                    input type="checkbox" value="FORTRAN" data-toggle="checkbox"
+                    | FORTRAN
                 li
                   label.checkbox
                     input type="checkbox" value="Go" data-toggle="checkbox"
