サイズも追加

--- a/index.slim
+++ b/index.slim
@@ -260,7 +260,7 @@ html lang="ja"
             img src="http://yoshiko-pg.github.io/img/logo_icon.png"
             | &nbsp;&nbsp;よしこ
         p.notice
-          | 言語追加要望、改善プルリク歓迎です。
+          | サイズ・言語追加要望、改善プルリク歓迎です。
 
 
 #copyright
